# docs/swagger.yaml
@@ -179,4 +179,32 @@ paths:
       summary: menambahkan data hobi baru
       tags:
       - Mengelola data hobi
+  /mhs/hobi/{id}:
+    put:
+      operationId: update-hobi
+      parameters:
+      - description: Id hobi
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 'Data yang bisa diupdate : nama hobi'
+        in: body
+        name: mahasiswa
+        required: true
+        schema:
+          $ref: '#/definitions/models.Hobi'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema: {}
+      summary: update data hobi
+      tags:
+      - Mengelola data hobi
 swagger: "2.0"
